@@ -3,7 +3,9 @@ package com.stlmpp.spigot.plugins.events;
 import com.stlmpp.spigot.plugins.StlmppPlugin;
 import com.stlmpp.spigot.plugins.StlmppPluginConfig;
 import com.stlmpp.spigot.plugins.utils.Util;
+
 import java.util.*;
+
 import org.bukkit.GameMode;
 import org.bukkit.Material;
 import org.bukkit.block.Block;
@@ -13,28 +15,43 @@ import org.bukkit.event.Listener;
 import org.bukkit.event.block.Action;
 import org.bukkit.event.player.PlayerInteractEvent;
 import org.bukkit.inventory.ItemStack;
+import org.jetbrains.annotations.Nullable;
 
 public class AutoSeedEvent implements Listener {
 
-  public AutoSeedEvent(StlmppPlugin plugin) {
+  public static @Nullable AutoSeedEvent register(StlmppPlugin plugin) {
+    if (!plugin.config.getBoolean(StlmppPluginConfig.autoSeedEnabled)) {
+      return null;
+    }
+    return new AutoSeedEvent(plugin);
+  }
+
+  private AutoSeedEvent(StlmppPlugin plugin) {
     this.plugin = plugin;
     this.plugin.getServer().getPluginManager().registerEvents(this, this.plugin);
+    this.configAutoSeedMaxBlocks = this.plugin.config.getInt(StlmppPluginConfig.autoSeedMaxBlocks);
+    this.plugin.log(
+        String.format("Auto seed activated with max of %s blocks!", this.configAutoSeedMaxBlocks));
     this.fromSeed.put(Material.WHEAT_SEEDS, Material.WHEAT);
     this.fromSeed.put(Material.MELON_SEEDS, Material.MELON_STEM);
     this.fromSeed.put(Material.PUMPKIN_SEEDS, Material.PUMPKIN_STEM);
     this.fromSeed.put(Material.BEETROOT_SEEDS, Material.BEETROOTS);
     this.fromSeed.put(Material.POTATO, Material.POTATOES);
     this.fromSeed.put(Material.CARROT, Material.CARROTS);
-    final var allowedSeedNames = this.plugin.config.getList(StlmppPluginConfig.autoSeedAllowedSeedList);
+    final var allowedSeedNames =
+        this.plugin.config.getList(StlmppPluginConfig.autoSeedAllowedSeedList);
     if (allowedSeedNames != null) {
       Util.setMaterialsFromNames(this.allowedSeeds, allowedSeedNames);
     }
   }
 
   private final StlmppPlugin plugin;
-  private final BlockFace[] blockFaces = { BlockFace.NORTH, BlockFace.EAST, BlockFace.SOUTH, BlockFace.WEST };
+  private final BlockFace[] blockFaces = {
+    BlockFace.NORTH, BlockFace.EAST, BlockFace.SOUTH, BlockFace.WEST
+  };
   private final Set<Material> allowedSeeds = new HashSet<>();
   private final Map<Material, Material> fromSeed = new HashMap<>();
+  private final int configAutoSeedMaxBlocks;
 
   private List<Block> getRelatives(Block block) {
     return Arrays.stream(this.blockFaces).map(block::getRelative).toList();
@@ -49,31 +66,33 @@ public class AutoSeedEvent implements Listener {
     while (!queue.isEmpty() && blocks.size() < maxBlocks) {
       currentIteration++;
       if (currentIteration > 1000) {
-        this.plugin.sendConsoleMessage("Auto seed tried more than 1000 iterations!");
+        this.plugin.log("Auto seed tried more than 1000 iterations!");
         break;
       }
       final var block = queue.remove();
-      if (!visited.contains(block)) {
-        visited.add(block);
-        if (block.getType() == Material.FARMLAND) {
-          if (block.getRelative(BlockFace.UP).getType().isAir()) {
-            blocks.add(block);
-          }
-          queue.addAll(this.getRelatives(block));
-        }
+      if (visited.contains(block)) {
+        continue;
       }
+      visited.add(block);
+      if (block.getType() != Material.FARMLAND) {
+        continue;
+      }
+      if (block.getRelative(BlockFace.UP).getType().isAir()) {
+        blocks.add(block);
+      }
+      queue.addAll(this.getRelatives(block));
     }
     return blocks;
   }
 
   private void removeOneFromStackList(List<ItemStack> items) {
-    if (items.size() == 0) {
+    if (items.isEmpty()) {
       return;
     }
-    final var first = items.get(0);
+    final var first = items.getFirst();
     first.setAmount(first.getAmount() - 1);
     if (first.getAmount() <= 0) {
-      items.remove(0);
+      items.removeFirst();
     }
   }
 
@@ -119,14 +138,14 @@ public class AutoSeedEvent implements Listener {
         items.add(itemStack);
       }
     }
-    if (items.size() == 0) {
+    if (items.isEmpty()) {
       return;
     }
-    final var configAutoSeedMaxBlocks = this.plugin.config.getInt(StlmppPluginConfig.autoSeedMaxBlocks);
     final var isCreativeGameMode = player.getGameMode() == GameMode.CREATIVE;
-    final var itemsAmount = isCreativeGameMode
-      ? configAutoSeedMaxBlocks
-      : items.stream().reduce(0, (acc, item) -> acc + item.getAmount(), Integer::sum);
+    final var itemsAmount =
+        isCreativeGameMode
+            ? configAutoSeedMaxBlocks
+            : items.stream().mapToInt(ItemStack::getAmount).sum();
     final var maxBlocks = Math.min(configAutoSeedMaxBlocks, itemsAmount);
     final var blocks = this.getBlocks(block, maxBlocks);
     for (Block _block : blocks) {
